--- a/css/reset.css
+++ b/css/reset.css
@@ -140,6 +140,7 @@ button:focus{
 input{
     outline: none;
     border:none;
+    padding: 0px;
     background-color: rgba(255, 255, 255, 0);
 }
 
