--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 96px 0px;
 }
 
 .main-content {
     padding: var(--horizontal-space);
+    margin-top: 100px;
 }
 
