--- a/css/valiables.css
+++ b/css/valiables.css
@@ -17,6 +17,7 @@
     --btn-disabled: #f6f6f6;
     --btn-main-normal: #FAE100;
     --btn-main-pressed: #DDC810;
+    --btn-main-hover: #facc00;
     /* icon */
     --icon-nav-default: #2F363E;
     --icon-light-gray: #cdcdcd;
