--- a/css/components/open-chat-list.css
+++ b/css/components/open-chat-list.css
@@ -64,3 +64,22 @@
     border: none;
     margin-top: -10px;
 }
+
+/* .open-chat-list__like 하트 아이콘 애니메이션 */
+
+@keyframes heartBeat{
+    0%{
+    transform: none;
+    }
+    80%{
+        transform: scale(1.3);
+    }
+    100%{
+    transform: none;
+    }
+}
+
+.open-chat-list__like:hover > svg{
+    will-change: transform;
+    animation: heartBeat 0.4s infinite ease-in-out;
+}
