--- a/css/components/nav-header.css
+++ b/css/components/nav-header.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    background-color: white;
 }
 
 .nav-header__column{
