--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/chat.css";
+@import "screens/no-mobile.css";
+@import "screens/rotate-mobile.css";
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
