media query edit

--- a/css/screens/rotate-mobile.css
+++ b/css/screens/rotate-mobile.css
@@ -7,13 +7,13 @@
     position: absolute;
     z-index: 20;
     top:0px;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@media screen and (orientation:landscape) {
+@media screen and (orientation:portrait) {
     #rotate-mobile{
-        display: flex;
+        display: none;
     }
 }
