--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,37 +1,27 @@
 .status-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 31px;
-    padding: 0px 5px;
-    box-sizing: border-box;
-    background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 21px;
+  padding: 2px 5px;
+  font-size: 14px;
+  font-family: "Do Hyeon";
 }
 
 .status-bar__column {
-    width: 33%;
-}
-
-.status-bar__column:first-child span {
-    margin-right: 5px;
+  width: 33%;
 }
 
 .status-bar__column:nth-child(2) {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .status-bar__column:last-child {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.status-bar__column:last-child span {
-    margin: 0px 5px;
-}
-
-.status-bar__column:last-child .fa-bolt {
-    margin-left: 5px;
+.fa-battery-half {
+  margin: 0px 5px;
 }
