--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,22 @@
 @import "reset.css";
 @import "valiables.css";
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Do+Hyeon&display=swap");
 /* components */
 @import "components/body-header.css";
 @import "components/status-bar.css";
-@import "components/nav.css";
-@import "components/screen-header.css";
-@import "components/user-component.css";
-@import "components/badge-num.css";
-@import "components/menu-icon-text.css";
-@import "components/section-header.css";
-@import "components/open-chat-list.css";
-@import "components/badge-dot.css";
-@import "components/dividers.css";
-@import "components/kokoa-app__list.css";
-@import "components/nav-header.css";
-@import "components/badge-new.css";
-@import "components/column-menu.css";
-@import "components/get-message.css";
-@import "components/send-message.css";
-/* screen */
-@import "screens/login.css";
-@import "screens/friends.css";
-@import "screens/find.css";
-@import "screens/more.css";
-@import "screens/chat.css";
 @import "screens/no-mobile.css";
+@import "components/profile-thumbnail.css";
+
+/* global element */
+* {
+  box-sizing: border-box;
+}
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Black Han Sans", sans-serif;
+  scrollbar-width: none;
 }
 
-.main-content {
-    padding: var(--horizontal-space);
-    margin-top: 100px;
+main {
+  font-family: "Do Hyeon", sans-serif;
 }
-
