--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -6,6 +6,8 @@
   padding: 2px 5px;
   font-size: 14px;
   font-family: "Do Hyeon";
+  background-color: var(--main);
+  color: white;
 }
 
 .status-bar__column {
