--- a/css/components/profile-thumbnail.css
+++ b/css/components/profile-thumbnail.css
@@ -1,6 +1,16 @@
-.profile {
-  width: 100px;
-  height: 100px;
+.profile--1x {
+  width: 40px;
+  height: 40px;
+}
+
+.profile--2x {
+  width: 48px;
+  height: 48px;
+}
+
+.profile--3x {
+  width: 56px;
+  height: 56px;
 }
 
 .profile-mask {
@@ -17,7 +27,5 @@
 .profile-photo {
   width: 100%;
   height: 100%;
-  background-image: url(https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg);
-  background-position: center;
-  background-size: cover;
+  object-fit: cover;
 }
