--- a/css/reset.css
+++ b/css/reset.css
@@ -80,12 +80,12 @@ mark,
 audio,
 video,
 button {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -100,56 +100,55 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
-    background-color: white;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 input:focus,
 button:active,
-button:focus{
-    outline: none;
+button:focus {
+  outline: none;
 }
 
-input{
-    outline: none;
-    border:none;
-    padding: 0px;
-    background-color: rgba(255, 255, 255, 0);
+input {
+  outline: none;
+  border: none;
+  padding: 0px;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 button {
-    border: none;
-    background-color: white;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
 }
