--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,13 @@
 @import "components/status-bar.css";
 @import "screens/no-mobile.css";
 @import "components/profile-thumbnail.css";
-
+@import "components/bottom-tabbar.css";
+@import "components/gnb.css";
+@import "components/badge.css";
+@import "components/user-component.css";
+@import "components/catergory.css";
+/* screens */
+@import "screens/friends.css";
 /* global element */
 * {
   box-sizing: border-box;
@@ -15,8 +21,21 @@
 body {
   font-family: "Black Han Sans", sans-serif;
   scrollbar-width: none;
+  width: 100%;
+  height: 100%;
 }
 
 main {
+  padding: var(--horizontal-space);
+  height: calc(100vh - 56px - 21px - 54px);
+  background: linear-gradient(var(--main), #1d2250);
+}
+
+main,
+.badge__number {
   font-family: "Do Hyeon", sans-serif;
+}
+
+button {
+  cursor: pointer;
 }
