--- a/css/valiables.css
+++ b/css/valiables.css
@@ -1,4 +1,18 @@
 :root {
   /* 화면 공통 좌우 패딩 */
   --horizontal-space: 0px 18px;
+  /* main */
+  --main: #0f111e;
+  --sub: #5100e6;
+  --dark-pupple: #2b2d37;
+  --light-pupple: #e1dcf8;
+  --sub-pupple: #9c9aaf;
+  --pupple-5: rgba(128, 129, 197, 0.5);
+  /* graysclae */
+  --silver: #a4a4a4;
+  --gray: #999999;
+  --light-gray: #c9c9c9;
+  --no-color: (0, 0, 0, 0);
+  /* border */
+  --border-normal: solid 1px rgba(255, 255, 255, 0.1);
 }
