--- a/css/valiables.css
+++ b/css/valiables.css
@@ -6,7 +6,7 @@
   --sub: #5100e6;
   --dark-pupple: #2b2d37;
   --light-pupple: #e1dcf8;
-  --sub-pupple: #9c9aaf;
+  --sub-pupple: #8985ac;
   --pupple-5: rgba(128, 129, 197, 0.5);
   /* graysclae */
   --silver: #a4a4a4;
