--- a/css/components/catergory.css
+++ b/css/components/catergory.css
@@ -1,7 +1,7 @@
 .catergory {
   background-color: var(--no-color);
   width: 100%;
-  height: 36px;
+  height: 50px;
   border-top: var(--border-normal);
   display: flex;
   justify-content: space-between;
@@ -12,4 +12,9 @@
 .catergory i {
   color: var(--pupple-5);
   font-size: 12px;
+  margin-left: 5px;
+}
+
+.catergory__sub-text {
+  color: var(--pupple-5);
 }
