--- a/css/valiables.css
+++ b/css/valiables.css
@@ -3,7 +3,7 @@
   --horizontal-space: 0px 18px;
   /* main */
   --main: #0f111e;
-  --sub: #5100e6;
+  --sub: #af7aff;
   --dark-pupple: #2b2d37;
   --light-pupple: #e1dcf8;
   --sub-pupple: #8985ac;
