--- a/css/components/bottom-tabbar.css
+++ b/css/components/bottom-tabbar.css
@@ -32,14 +32,15 @@
 /* svg 컬러값 조정 */
 
 .bottom_tabbar__icon {
-  fill: var(--gray);
+  fill: white;
 }
 
 .bottom_tabbar__icon--focus {
   fill: var(--sub);
 }
 
-.bottom-tabbar__column:nth-child(2),
-.bottom-tabbar__column:last-child {
+.bottom-tabbar__icon-area {
+  width: 22px;
+  height: 22px;
   position: relative;
 }
