--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -3,7 +3,7 @@
   margin-left: calc(50% - 50vw);
   background-color: #000000;
   padding: 14px 0px;
-  color: white;
+  color: var(--sub-pupple);
   font-size: 16px;
 }
 
@@ -17,7 +17,7 @@
 .guide-display svg {
   width: 14px;
   height: 14px;
-  fill: var(--gray);
+  fill: var(--sub-pupple);
   margin-bottom: 2px;
 }
 
@@ -27,7 +27,6 @@
 
 .guide-display i {
   font-size: 12px;
-  color: var(--gray);
 }
 
 .catergory {
