--- a/css/screens/no-mobile.css
+++ b/css/screens/no-mobile.css
@@ -1,7 +1,7 @@
 #no-mobile {
   width: 100vw;
   height: 100vh;
-  background-color: var(--border-nav);
+  background-color: var(--main);
   color: tomato;
   font-size: 40px;
   position: absolute;
