--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -63,3 +63,23 @@
   font-size: 12px;
   color: rgba(128, 129, 197, 0.479);
 }
+
+.user__phone {
+  display: flex;
+  align-items: center;
+}
+
+.user__icon-message {
+  fill: var(--sub-pupple);
+}
+
+.user__subinfo svg {
+  width: 30px;
+  height: 30px;
+}
+
+.user-component__link {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
