--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,6 +1,6 @@
 .menu-list {
   width: 100%;
-  padding: 10px 0px;
+  margin: 15px 0px 30px 0px;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
@@ -35,7 +35,7 @@
   margin-top: 18px;
 }
 
-.catergory__emtpy {
+.category__emtpy {
   width: 100%;
   height: 180px;
   color: var(--sub-pupple);
