--- a/css/style.css
+++ b/css/style.css
@@ -13,26 +13,44 @@
 @import "components/catergory.css";
 @import "components/menu.css";
 @import "components/open-chat.css";
+@import "components/screen-header.css";
+@import "components/setting.css";
+@import "components/input__chat.css";
 /* screens */
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 /* global element */
+@import "interaction.css";
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Black Han Sans", sans-serif;
+  font-family: "Black Han Sans", "Do Hyeon", sans-serif;
   letter-spacing: 0.5px;
   scrollbar-width: none;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  overflow: none;
 }
 
 main {
   padding: var(--horizontal-space);
+}
+
+.bg-main {
+  background-color: var(--main);
+}
+
+.bg-gradaiton {
   height: calc(100vh - 56px - 21px - 54px);
-  background: linear-gradient(var(--main), #202458);
+  background: linear-gradient(rgb(15, 17, 30, 1), rgba(15, 17, 30, 0.6) 90%),
+    linear-gradient(127deg, rgba(47, 0, 167, 0.8), rgba(47, 0, 167, 0.6) 90%),
+    linear-gradient(300deg, rgba(25, 0, 255, 0.8), rgba(25, 0, 255, 0.2) 90%);
   overflow-x: auto;
 }
 
