login screen done

--- a/css/valiables.css
+++ b/css/valiables.css
@@ -4,6 +4,7 @@
   /* main */
   --main: #0f111e;
   --sub: #af7aff;
+  --sub-press: #8e61d1;
   --dark-pupple: #2b2d37;
   --light-pupple: #e1dcf8;
   --sub-pupple: #8985ac;
