--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+@import "screens/login.css";
 /* global element */
 @import "interaction.css";
 
@@ -66,6 +67,7 @@ main,
 button,
 .user-component--1x,
 .user-component--2x,
-.user-component--3x {
+.user-component--3x,
+.login__btn {
   cursor: pointer;
 }
