--- a/css/components/input__chat.css
+++ b/css/components/input__chat.css
@@ -1,9 +1,12 @@
 .input__chat {
   width: 100%;
   height: 56px;
+  position: absolute;
+  bottom: 0px;
   display: flex;
   align-items: center;
   padding-left: 18px;
+  background-color: white;
 }
 
 .input__chat svg {
@@ -49,12 +52,50 @@
 .input__add-img {
   width: 22px;
   height: 100%;
+  transition: ease-in-out 0.3s opacity;
 }
 
 .input__chat_write:focus-within .input__send {
   background-color: var(--sub);
 }
 
+.input__chat_write:focus-within .input__send > svg {
+  animation: input__send-moving 1s infinite ease-in-out;
+}
+
+@keyframes input__send-moving {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  25% {
+    transform: rotateZ(-15deg);
+  }
+  50% {
+    transform: rotateZ(15deg);
+  }
+  100% {
+    transform: scaleY(0deg);
+  }
+}
+
 .input__chat_write:focus-within #icon_send {
   fill: white;
+}
+
+.input__send,
+#icon_send {
+  transition: all 0.2s ease-in-out;
+}
+
+.input__chat_area {
+  transition: all 0.5s ease-in-out;
+}
+
+.input__chat_area:focus {
+  width: 100%;
+  transform: translateX(-40px);
+}
+
+.input__chat:focus-within .input__add-img {
+  opacity: 0;
 }
