--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
   background: linear-gradient(var(--main), #202458);
-  height: calc(100vh - 56px - 21px - 54px);
+  height: calc(100vh - 21px - 54px);
 }
 
 .chat-day {
