--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -33,7 +33,7 @@ form {
 
 .login__input {
   height: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 18px;
   border-bottom: var(--border-normal);
   color: white;
@@ -50,12 +50,16 @@ form {
 
 .login__btn {
   width: 100%;
-  height: 60px;
+  height: 56px;
   background-color: var(--pupple-5);
   font-size: 16px;
   border-radius: 5px;
-  margin-top: 20px;
+  margin-top: 34px;
   transition: background-color 0.2s ease-in, color 0.2s ease-in;
+}
+
+.login > button {
+  margin-top: 16px;
 }
 
 .login__btn:hover {
