--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -37,6 +37,10 @@
   width: calc(100% - 40px - 15px);
 }
 
+.user-component__content--1x span {
+  font-size: 16px;
+}
+
 .user__text {
   display: flex;
   flex-direction: column;
