--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -4,8 +4,21 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: linear-gradient(var(--main), #202458);
+  background: linear-gradient(rgb(15, 17, 30, 1), rgba(15, 17, 30, 0.6) 90%),
+    linear-gradient(127deg, rgba(47, 0, 167, 0.8), rgba(47, 0, 167, 0.6) 90%),
+    linear-gradient(300deg, rgba(25, 0, 255, 0.8), rgba(25, 0, 255, 0.2) 90%);
   height: calc(100vh - 21px - 54px);
+}
+
+.second {
+  background: linear-gradient(rgb(15, 17, 30, 1), rgba(15, 17, 30, 0.6) 90%),
+    linear-gradient(300deg, rgba(255, 0, 21, 0.8), rgba(255, 0, 21, 0.5) 90%);
+}
+
+.third {
+  background: linear-gradient(rgb(15, 17, 30, 1), rgba(15, 17, 30, 0.6) 90%),
+    linear-gradient(127deg, rgba(14, 70, 255, 0.8), rgba(47, 0, 167, 0.2) 30%),
+    linear-gradient(300deg, rgb(0, 174, 255), rgba(0, 174, 255, 0.5) 90%);
 }
 
 .chat-day {
@@ -37,7 +50,7 @@
 }
 .chat-you__nickname {
   color: var(--sub-pupple);
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .chat-you__message,
@@ -56,7 +69,7 @@
 
 .chat-you__bubble,
 .chat-me__bubble {
-  font-size: 18px;
+  font-size: 16px;
   padding: 10px 12px;
   border-radius: 15px;
 }
@@ -69,7 +82,7 @@
 
 .chat-you__time,
 .chat-me__time {
-  font-size: 14px;
+  font-size: 12px;
   color: var(--pupple-5);
   margin: 0px 6px;
 }
