--- a/css/screens/splash.css
+++ b/css/screens/splash.css
@@ -5,7 +5,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 0px;
+  z-index: 1;
+  animation: hide-splash 0.5s ease-in forwards;
+  animation-delay: 4s;
+  animation-iteration-count: 1;
 }
 lottie-player {
   scale: 0.5;
+}
+
+@keyframes hide-splash {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
