--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -22,6 +22,7 @@
   font-size: 18px;
   color: var(--sub-pupple);
   text-align: center;
+  line-height: 1.2;
 }
 
 form {
@@ -50,12 +51,13 @@ form {
 
 .login__btn {
   width: 100%;
-  height: 56px;
+  height: 54px;
   background-color: var(--pupple-5);
-  font-size: 16px;
+  font-size: 18px;
   border-radius: 5px;
   margin-top: 34px;
   transition: background-color 0.2s ease-in, color 0.2s ease-in;
+  font-family: sans-serif;
 }
 
 .login > button {
